package com.viking.pathfinder.listener;


public interface OnNoteLongClickListener<T> {
    void onNoteLongClick(T item);
}
